--- a/repasoHTML.html
+++ b/repasoHTML.html
@@ -26,7 +26,14 @@
       irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
     <br><br><br>
-    <hr><hr>
+    <hr>
+    <h2>
+      Imágenes en HTML
+    </h2>
+    <img src="img/burbuja.jpg" alt="Puede tener una burbuja explotando" title="Burbujita" width="255px">
+
+
+    <hr>
     <h3>Tercer encabezado de la página</h3>
     <p>
       <strong>Estoy en negritas</strong><br><hr>
@@ -37,8 +44,44 @@
         Todos tienen una historia que contar
         PD. Soy una cita de texto con formato diferente
       </blockquote>
-
+      <h3>Listado de frutas: </h3>
+      <ul>
+        <li>
+          Manzana
+          <ul>
+            <li>Verde</li>
+            <li>Roja</li>
+            <li>Amarilla</li>
+          </ul>
+        </li>
+        <li>Naranja</li>
+        <li>Plátano</li>
+        <li>Pera</li>
+      </ul>
     </p>
+    <h3>Tablas</h3>
+    <table border="1">
+      <tr>
+        <th>Nombre</th>
+        <th>Apellidos</th>
+        <th>País</th>
+      </tr>
+      <tr>
+        <td>Baruch</td>
+        <td>Guerra</td>
+        <td>México</td>
+      </tr>
+      <tr>
+        <td>Eleazar</td>
+        <td>Parra</td>
+        <td>México</td>
+      </tr>
+      <tr>
+        <td>Giovanni</td>
+        <td colspan="2">Paredes</td>
+        
+      </tr>
+    </table>
   </body>
 
 </html>
