Añadido gitignore, modificado el html de práctica. Ignorados los estáticos

--- a/repasoHTML.html
+++ b/repasoHTML.html
@@ -44,6 +44,11 @@
         Todos tienen una historia que contar
         PD. Soy una cita de texto con formato diferente
       </blockquote>
+      <h3>Formulario</h3>
+      <form class="basic-form" action="" method="post">
+        <label for="nombre">Nombre</label>
+        <input type="text" name="nombre" placeholder="Ej. Juan Pérez">
+      </form>
       <h3>Listado de frutas: </h3>
       <ul>
         <li>
@@ -79,7 +84,7 @@
       <tr>
         <td>Giovanni</td>
         <td colspan="2">Paredes</td>
-        
+
       </tr>
     </table>
   </body>
