--- a/repasoHTML.html
+++ b/repasoHTML.html
@@ -46,8 +46,26 @@
       </blockquote>
       <h3>Formulario</h3>
       <form class="basic-form" action="" method="post">
-        <label for="nombre">Nombre</label>
-        <input type="text" name="nombre" placeholder="Ej. Juan Pérez">
+        <p>
+          <label for="nombre">Nombre</label>
+          <input type="text" name="nombre" placeholder="Ej. Juan Pérez">
+        </p>
+        <p>
+          <label for="description">Descripción</label>
+          <textarea name="description"></textarea>
+        </p>
+        <input type="radio" name="gender" value="hombre">Hombre <br>
+        <input type="radio" name="gender" value="mujer">Mujer <br>
+        <input type="radio" name="gender" value="nada">Nada <br>
+
+        <select class="" name="gender2">
+          <option value="hombre">Hombre</option>
+          <option value="mujer">Mujer</option>
+          <option value="nada">Nada</option>
+        </select>
+
+        <input type="submit" name="" value="Enviar formulario"/>
+
       </form>
       <h3>Listado de frutas: </h3>
       <ul>
